--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </p>
                     <div class="pt-2">
                         <a class="button inline-flex h-12 items-center justify-center rounded-md bg-gray-800 text-white px-8 text-lg font-medium shadow transition-all hover:bg-blue-700 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 animate-bounce mt-8"
-                            href="#">
+                                href="https://drive.google.com/file/d/1gC7ddXJsCdMWhbh-uLcqu2WwttUYEs4Q/view?usp=sharing" target="_blank">
                             Download Resume
                         </a>
                     </div>
